--- a/Paginas/calculadora.html
+++ b/Paginas/calculadora.html
@@ -14,6 +14,8 @@
 
   <header>
     <div class="logo">🌞 <strong>SolarTech</strong></div>
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="menu-icon">&#9776;</label>
     <nav>
       <ul>
         <li><a href="../Paginas/index.html">Inicio</a></li>
