--- a/Paginas/acerca.html
+++ b/Paginas/acerca.html
@@ -13,7 +13,8 @@
 <body>
 
   <header>
-    <div class="logo">🌞 <strong>SolarTech</strong></div>
+    <div class="logo"> <img src="../IMG/logo.png">
+    <strong>🌞SolarTech</strong></div>
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="menu-icon">&#9776;</label>
     <nav>
