--- a/Paginas/calculadora.html
+++ b/Paginas/calculadora.html
@@ -26,6 +26,11 @@
       </ul>
     </nav>
   </header>
+  <section class="fondo">
+  <section class="hero">
+
+  </section>
+  </section>
   </body>
 <footer>
   <p>&copy; 2025 SolarTech. Todos los derechos reservados.</p>
