--- a/Paginas/index.html
+++ b/Paginas/index.html
@@ -83,7 +83,7 @@
       <div class="text">
         <h1>Aprovecha la <br><span>energía del Sol</span></h1>
         <p>Explora cómo la energía solar puede transformar tu vida y proteger al planeta.</p>
-        <a href="#" class="boton">Empieza ahora</a>
+        <a href="../Paginas/calculadora.html" class="boton">Empieza ahora</a>
       </div>
 
       <section class="sabias">
