Calculator functionjs and labels for email sender

--- a/Paginas/index.html
+++ b/Paginas/index.html
@@ -74,16 +74,16 @@
   <section class="fondo">
 
     <!-- Sección Hero -->
-    <section class="hero">
-      <div class="hex-container">
+  <section class="hero animate-fadeInUp">
+      <div class="hex-container animate-slideInLeft">
         <div class="hex hex1"><img src="../IMG/img1.jpg" /></div>
         <div class="hex hex2"><img src="../IMG/img2.jpg" /></div>
         <div class="hex hex3"><img src="../IMG/Energia solar.jpg" /></div>
       </div>
-      <div class="text">
+      <div class="text animate-slideInRight">
         <h1>Aprovecha la <br><span>energía del Sol</span></h1>
         <p>Explora cómo la energía solar puede transformar tu vida y proteger al planeta.</p>
-        <a href="../Paginas/calculadora.html" class="boton">Empieza ahora</a>
+        <a href="../Paginas/calculadora.html" class="boton">🚀 Empieza ahora</a>
       </div>
 
       <section class="sabias">
