--- a/Paginas/tabla.html
+++ b/Paginas/tabla.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabulación de datos</title>
-    <!--Implementacion Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!--Fin implementacion Bootstrap-->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tabulación de datos</title>
 
-    <link rel="stylesheet" href="../CSS/tabla.css">
-    <link rel="stylesheet" href="../CSS/Navegador_Grafico.css">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="../CSS/tabla.css">
+  <link rel="stylesheet" href="../CSS/Navegador_Grafico.css">
 </head>
 <body>
-    <script src="../JS/carga_documentos.js"></script>
+  
+  <!-- Barra de navegación -->
+  <nav class="navbar navbar-dark bg-dark px-3">
+    <a href="javascript:history.back()" class="btn btn-outline-light me-2">⬅ Volver</a>
+    <span class="navbar-brand">📊 Tabulación Energía Solar</span>
+  </nav>
 
-    <main id="contenido">
-      <nav id="barra-navegador-graficos">
+  <main id="contenido" class="container my-4">
+    
+    <!-- Botón para cargar datos -->
+    <div class="text-center mb-4">
+      <button type="button" class="btn btn-primary btn-lg" onclick="carga_documento()">
+        Cargar datos de energía solar 🌞
+      </button>
+    </div>
 
-        <button type="button" class="btn-barra" onclick="carga_documento()">energia solar</button>
-      </nav>
+    <!-- Tabla de datos -->
+    <div id="tabulacion" class="table-responsive">
+      <table class="table table-striped table-bordered">
+        <thead class="table-dark">
+          <tr id="encabezado"></tr>
+        </thead>
+        <tbody id="cuerpo"></tbody>
+      </table>
+    </div>
+    
+  </main>
 
-
-      <div id="tabulacion">
-
-        <table class="table">
-          <thead class="table-dark">
-            <tr id="encabezado"></tr>
-          </thead>
-          <tbody id="cuerpo">
-          </tbody>
-        </table>
-
-      </div><!--fin tabulacion-->
-    </main>
+  <script src="../JS/carga_documentos.js"></script>
 </body>
 </html>
